# organiser_agent

./: README.md  main.py  pyproject.toml  requirements.txt
models/: habit.py  task.py
schema/: supabase_schema.sql
services/: agent_service.py  analytics_service.py  prediction_service.py  supabase_service.py
